fixed colors and added the label, model still training on GPU

--- a/ForwardDataLabTask1/test3 copy 2.ipynb
+++ b/ForwardDataLabTask1/test3 copy 2.ipynb
@@ -641,6 +641,21 @@
     "if website_text:\n",
     "    transform_text_to_ner(website_text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Check if a GPU is available\n",
+    "if tf.test.gpu_device_name():\n",
+    "    print('Default GPU Device: {}'.format(tf.test.gpu_device_name()))\n",
+    "else:\n",
+    "    print(\"No GPU detected. Using CPU.\")"
+   ]
   }
  ],
  "metadata": {
