--- a/myner/test3 copy 2.ipynb
+++ b/myner/test3 copy 2.ipynb
@@ -641,6 +641,30 @@
     "if website_text:\n",
     "    transform_text_to_ner(website_text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Check if a GPU is available\n",
+    "if tf.test.gpu_device_name():\n",
+    "    print('Default GPU Device: {}'.format(tf.test.gpu_device_name()))\n",
+    "else:\n",
+    "    print(\"No GPU detected. Using CPU.\")"
+   ]
   }
  ],
  "metadata": {
