NER Project is done

--- a/myner/test3 copy.ipynb
+++ b/myner/test3 copy.ipynb
@@ -327,28 +327,359 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nlp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/shubham/NERChromeExtDemoTask2/mysite/myner/test3 copy.ipynb Cell 4\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/shubham/NERChromeExtDemoTask2/mysite/myner/test3%20copy.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# for 30 it was 7 hours\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/shubham/NERChromeExtDemoTask2/mysite/myner/test3%20copy.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# for 10 it was 2 hours\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/shubham/NERChromeExtDemoTask2/mysite/myner/test3%20copy.ipynb#X21sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# custom_ner_modl = spacy.load(\"custom_ner_model\")\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/shubham/NERChromeExtDemoTask2/mysite/myner/test3%20copy.ipynb#X21sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m nlp\u001b[39m.\u001b[39mto_disk(\u001b[39m\"\u001b[39m\u001b[39mcustom_ner_model\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nlp' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 1, 'PERSON'), (3, 4, 'ORG')]\n"
      ]
     }
    ],
    "source": [
-    "# for 30 it was 7 hours\n",
-    "# for 10 it was 2 hours\n",
-    "# custom_ner_modl = spacy.load(\"custom_ner_model\")\n",
+    "import spacy\n",
+    "from collections import defaultdict\n",
     "\n",
-    "nlp.to_disk(\"custom_ner_model\")\n",
+    "texts = [\"John works at Microsoft.\"]\n",
+    "\n",
+    "# Number of alternate analyses to consider. More is slower, and not necessarily better -- you need to experiment on your problem.\n",
+    "beam_width = 16\n",
+    "\n",
+    "# This clips solutions at each step. \n",
+    "# We multiply the score of the top-ranked action by this value, and use the result as a threshold.\n",
+    "# This prevents the parser from exploring options that look very unlikely, saving a bit of efficiency. \n",
+    "# Accuracy may also improve, because we've trained on greedy objective.\n",
+    "beam_density = 0.0001 \n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "\n",
+    "docs = list(nlp.pipe(texts))\n",
+    "beams = nlp.get_pipe('ner').beam_parse(docs, beam_width=beam_width, beam_density=beam_density)\n",
+    "\n",
+    "# Calculate entity scores\n",
+    "entity_scores = defaultdict(float)\n",
+    "for doc, beam in zip(docs, beams):\n",
+    "    for score, ents in nlp.get_pipe('ner').moves.get_beam_parses(beam):\n",
+    "        total_score = score\n",
+    "        print(ents)\n",
+    "        for start, end, label in ents:\n",
+    "            entity_scores[(start, end, label)] += score / total_score\n",
+    "\n",
+    "# # Print entity scores\n",
+    "# for key, score in entity_scores.items():\n",
+    "#     print(f'Entity: {key}, Score: {score}')\n",
+    "\n",
+    "# # # Calculate the total sum of probabilities\n",
+    "# total_prob_sum = sum(entity_scores.values())\n",
+    "# print(total_prob_sum)\n",
+    "\n",
+    "# # # Normalize entity scores\n",
+    "# normalized_entity_scores = {key: prob / total_prob_sum for key, prob in entity_scores.items()}\n",
+    "# print(normalized_entity_scores)\n",
+    "\n",
+    "# # Convert to a list of dictionaries\n",
+    "# entity_probabilities = [{'start': start, 'end': end, 'label': label, 'prob': prob}\n",
+    "#                         for (start, end, label), prob in normalized_entity_scores.items()]\n",
+    "\n",
+    "# # Sort and print the normalized results\n",
+    "# for entity in sorted(entity_probabilities, key=lambda x: x['start']):\n",
+    "#     print(entity)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+       "<mark class=\"entity\" style=\"background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    John\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PERSON</span>\n",
+       "</mark>\n",
+       " works at \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Microsoft\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       ".</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from spacy.training.example import Example\n",
+    "import random\n",
+    "import spacy\n",
+    "from spacy import displacy\n",
+    "\n",
+    "texts = 'John works at Microsoft.'\n",
+    "custom_ner_modl = spacy.load(\"en_core_web_sm\")\n",
+    "doc = custom_ner_modl(texts)\n",
+    "displacy.render(doc, style='ent')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# sample_txt = \"Albert Einstein was born on March 14, 1879, in Ulm, in the Kingdom of Württemberg in the German Empire. He made significant contributions to the field of theoretical physics, especially in the development of the theory of relativity. Einstein received the Nobel Prize in Physics in 1921 for his explanation of the photoelectric effect. He later moved to the United States, where he continued his scientific work and became a prominent figure in academia.\"\n",
+    "\n",
+    "\n",
+    "# custom_ner_modl = spacy.load(\"custom_ner_model\")\n",
+    "# doc = custom_ner_modl(sample_txt)\n",
+    "\n",
+    "# # Render the visualization with custom colors\n",
+    "# displacy.render(doc, style='ent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 1, 'PERSON'), (3, 4, 'ORG')]\n",
+      "Entity: (0, 4, 'ORG'), Score: 1.0\n",
+      "Entity: (14, 23, 'ORG'), Score: 1.0\n",
+      "2.0\n",
+      "{(0, 4, 'ORG'): 0.5, (14, 23, 'ORG'): 0.5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "text = \"John works at Microsoft.\"\n",
+    "\n",
+    "# Number of alternate analyses to consider. More is slower, and not necessarily better -- you need to experiment on your problem.\n",
+    "beam_width = 16\n",
+    "\n",
+    "# This clips solutions at each step.\n",
+    "# We multiply the score of the top-ranked action by this value, and use the result as a threshold.\n",
+    "# This prevents the parser from exploring options that look very unlikely, saving a bit of efficiency.\n",
+    "# Accuracy may also improve, because we've trained on greedy objective.\n",
+    "beam_density = 0.0001\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "\n",
+    "doc = nlp(text)\n",
+    "beams = nlp.get_pipe('ner').beam_parse([doc], beam_width=beam_width, beam_density=beam_density)\n",
+    "\n",
+    "# Calculate entity scores\n",
+    "entity_scores = defaultdict(float)\n",
+    "\n",
+    "for beam in beams:\n",
+    "    for score, ents in nlp.get_pipe('ner').moves.get_beam_parses(beam):\n",
+    "        total_score = score\n",
+    "        print(ents)\n",
+    "        for ents in doc.ents:\n",
+    "            entity_scores[(ents.start_char, ents.end_char, label)] += score / total_score\n",
+    "\n",
+    "# # Print entity scores\n",
+    "# for (start, end, label), score in entity_scores.items():\n",
+    "#     print(f'Entity: {label}, Start Char: {start}, End Char: {end}, Score: {score}')\n",
+    "\n",
+    "# Print entity scores\n",
+    "for key, score in entity_scores.items():\n",
+    "    print(f'Entity: {key}, Score: {score}')\n",
+    "\n",
+    "# # Calculate the total sum of probabilities\n",
+    "total_prob_sum = sum(entity_scores.values())\n",
+    "print(total_prob_sum)\n",
+    "\n",
+    "# # Normalize entity scores\n",
+    "normalized_entity_scores = {key: prob / total_prob_sum for key, prob in entity_scores.items()}\n",
+    "print(normalized_entity_scores)\n",
+    "\n",
+    "# # Convert to a list of dictionaries\n",
+    "# entity_probabilities = [{'start': start, 'end': end, 'label': label, 'prob': prob}\n",
+    "#                         for (start, end, label), prob in normalized_entity_scores.items()]\n",
+    "\n",
+    "# # Sort and print the normalized results\n",
+    "# for entity in sorted(entity_probabilities, key=lambda x: x['start']):\n",
+    "#     print(entity)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[{'label': 'PER', 'start': 0, 'end': 7, 'score': 1.0}, {'label': 'ORG', 'start': 77, 'end': 83, 'score': 1.0}, {'label': 'GEO', 'start': 85, 'end': 92, 'score': 1.0}, {'label': 'ORG', 'start': 162, 'end': 168, 'score': 1.0}, {'label': 'GEO', 'start': 170, 'end': 177, 'score': 1.0}, {'label': 'ORG', 'start': 247, 'end': 253, 'score': 1.0}, {'label': 'GEO', 'start': 255, 'end': 262, 'score': 1.0}, {'label': 'ORG', 'start': 332, 'end': 338, 'score': 1.0}]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "text = \"Shubham is a really cool guy who loves to eat apples and he likes to work at Google. Shubham is a really cool guy who loves to eat apples and he likes to work at Google. Shubham is a really cool guy who loves to eat apples and he likes to work at Google. Shubham is a really cool guy who loves to eat apples and he likes to work at Google.\"\n",
+    "beam_width = 16\n",
+    "beam_density = 0.0001\n",
+    "\n",
+    "custom_ner_model_path = \"/Users/shubham/ForwardDataLabTask1/task2_my_custom_ner_modelV2\"\n",
+    "nlp = spacy.load(custom_ner_model_path)\n",
+    "\n",
+    "doc = nlp(text)\n",
+    "beams = nlp.get_pipe('ner').beam_parse([doc], beam_width=beam_width, beam_density=beam_density)\n",
+    "\n",
+    "# Calculate entity scores\n",
+    "entityScore = []\n",
+    "currEntityScore = []\n",
+    "\n",
+    "for beam in beams:\n",
+    "    for score, ents in nlp.get_pipe('ner').moves.get_beam_parses(beam):\n",
+    "        for ent in doc.ents:\n",
+    "            ent_info = {'label' : ent.label_, 'start' : ent.start_char, 'end' : ent.end_char, 'score': score}\n",
+    "            currEntityScore.append(ent_info)\n",
+    "\n",
+    "entityScore.append(currEntityScore)\n",
+    "print(entityScore)\n",
+    "\n",
+    "# print(entityScore[0]['entities'])\n",
+    "\n",
+    "# # Print entity scores\n",
+    "# for key, score in entity_scores.items():\n",
+    "#     print(f'Entity: {key}, Score: {score}')\n",
+    "\n",
+    "# print(entities)\n",
+    "\n",
+    "# # # Calculate the total sum of probabilities\n",
+    "# total_prob_sum = sum(entity_scores.values())\n",
+    "# print(total_prob_sum)\n",
+    "\n",
+    "# # # Normalize entity scores\n",
+    "# normalized_entity_scores = {key: prob / total_prob_sum for key, prob in entity_scores.items()}\n",
+    "# print(normalized_entity_scores)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() takes exactly 2 positional arguments (1 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[97], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m text, annotations \u001b[38;5;129;01min\u001b[39;00m train_data:\n\u001b[1;32m     15\u001b[0m     doc \u001b[38;5;241m=\u001b[39m nlp\u001b[38;5;241m.\u001b[39mmake_doc(text)\n\u001b[0;32m---> 16\u001b[0m     gold \u001b[38;5;241m=\u001b[39m Example(doc, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mannotations)\n\u001b[1;32m     17\u001b[0m     loss, scores \u001b[38;5;241m=\u001b[39m nlp\u001b[38;5;241m.\u001b[39mupdate([gold\u001b[38;5;241m.\u001b[39mdoc], [gold], drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m)\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;66;03m# Access scores for each token\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/spacy/training/example.pyx:79\u001b[0m, in \u001b[0;36mspacy.training.example.Example.__init__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() takes exactly 2 positional arguments (1 given)"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from spacy.training import Example\n",
+    "\n",
+    "# Load the spaCy model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Example training data\n",
+    "train_data = [\n",
+    "    (\"Apple is a company.\", {'entities': [(0, 5, 'ORG')]})\n",
+    "]\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in range(10):  # Adjust the number of epochs as needed\n",
+    "    for text, annotations in train_data:\n",
+    "        doc = nlp.make_doc(text)\n",
+    "        gold = Example(doc, **annotations)\n",
+    "        loss, scores = nlp.update([gold.doc], [gold], drop=0.5)\n",
+    "\n",
+    "        # Access scores for each token\n",
+    "        for token, score_dict in zip(doc, scores):\n",
+    "            print(f\"Token: {token.text}, Entity Scores: {score_dict}\")\n",
+    "\n",
+    "# Now you can access the entity scores during training for each token\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Shubham\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PER</span>\n",
+       "</mark>\n",
+       " is a really cool guy who loves to eat apples and he likes to work at \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Google\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       ". \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Shubham\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GEO</span>\n",
+       "</mark>\n",
+       " is a really cool guy who loves to eat apples and he likes to work at \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Google\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       ". \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Shubham\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GEO</span>\n",
+       "</mark>\n",
+       " is a really cool guy who loves to eat apples and he likes to work at \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Google\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       ". \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Shubham\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GEO</span>\n",
+       "</mark>\n",
+       " is a really cool guy who loves to eat apples and he likes to work at \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Google\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       ".</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from spacy.training.example import Example\n",
+    "import random\n",
+    "import spacy\n",
+    "from spacy import displacy\n",
+    "\n",
+    "text = \"Shubham is a really cool guy who loves to eat apples and he likes to work at Google. Shubham is a really cool guy who loves to eat apples and he likes to work at Google. Shubham is a really cool guy who loves to eat apples and he likes to work at Google. Shubham is a really cool guy who loves to eat apples and he likes to work at Google.\"\n",
+    "custom_ner_model_path = \"/Users/shubham/ForwardDataLabTask1/task2_my_custom_ner_modelV2\"\n",
+    "nlp = spacy.load(custom_ner_model_path)\n",
+    "doc = nlp(text)\n",
+    "displacy.render(doc, style='ent')\n"
    ]
   }
  ],
